--- a/unit_3/index.html
+++ b/unit_3/index.html
@@ -6,7 +6,7 @@
 <title>volt productions</title>
 <body>
 	<h1>volt</h1>
-	<p id="slogan">visually magnificent storytelling how you imagined it.</p>
+	<h2 id="slogan">visually magnificent storytelling how you imagined it.</h2>
   <p>Empathy is the most important emotion to share in today's world. We decided to do all we can to capture it in all its beauty through film to preserve for future generations.</p>
   <p>Our mediums include:
     <ul>
