--- a/unit_3/index.html
+++ b/unit_3/index.html
@@ -3,11 +3,12 @@
 <head>
 	<link rel="stylesheet" type="text/css" href="css/style.css">
 </head>
-<title>volt productions</title>
+<title>volt creative</title>
 <body>
 	<h1>volt.</h1>
 	<h2 id="slogan">visually magnificent storytelling how you imagined it.</h2>
-  <p>Empathy is the most important emotion to share in today's world. We decided to do all we can to capture it in all its beauty through film and experiences to preserve for future generations.</p>
+<div>
+	<p>Empathy is the most important emotion to share in today's world. We decided to do all we can to capture it in all its beauty through film and experiences to preserve for future generations.</p>
   <p>Our mediums include:
     <ul>
       <li>live action film</li>
@@ -17,5 +18,6 @@
   </p>
   <p>Contact us at <a href="mailto:elizabethmvana@gmail.com?subject=Hello!">elizabethmvana@gmail.com</a>
   </p>
+</div>
 </body>
 </html>
