--- a/unit_3/index.html
+++ b/unit_3/index.html
@@ -3,7 +3,7 @@
 <head>
 	<link rel="stylesheet" type="text/css" href="css/style.css">
 </head>
-<title>volt creative</title>
+<title>volt productions</title>
 <body>
 	<h1>volt.</h1>
 	<h2 id="slogan">visually magnificent storytelling how you imagined it.</h2>
@@ -16,7 +16,7 @@
       <li>powerful software user experiences</li>
     </ul>
   </p>
-  <p>Contact us at <a href="mailto:elizabethmvana@gmail.com?subject=Hello!">elizabethmvana@gmail.com</a>
+  <p>Contact us at <a href="mailto:elizabethmvana@gmail.com?subject=Hello!">hello@voltproductions.com</a>
   </p>
 </div>
 </body>
