--- a/unit_4/index.html
+++ b/unit_4/index.html
@@ -19,5 +19,14 @@
   <p>Contact us at <a href="mailto:elizabethmvana@gmail.com?subject=Hello!">hello@voltproductions.com</a>
   </p>
 </div>
+<div>
+	<h1>Wedding Footage</h1>
+</div>
+<div>
+	<h1>Animation</h1>
+</div>
+<div>
+	<h1>Powerful Software User Experiences</h1>
+</div>
 </body>
 </html>
