--- a/unit_4/index.html
+++ b/unit_4/index.html
@@ -5,9 +5,24 @@
 	<title>volt productions</title>
 </head>
 <body>
+<p>
+<br>
+</p>
 	<h1>volt.</h1>
 	<h2 id="slogan">visually magnificent storytelling how you imagined it.</h2>
-<div>
+<p>
+<br>
+</p>
+<p>
+<br>
+</p>
+<p>
+<br>
+</p>
+<p>
+<br>
+</p>
+	<div>
 	<p>Empathy is the most important emotion to share in today's world. We decided to do all we can to capture it in all its beauty through film and experiences to preserve for future generations.</p>
   <p>Our mediums include:
     <ul>
@@ -21,6 +36,9 @@
 </div>
 <div>
 	<h1>Wedding Footage</h1>
+</div>
+<div>
+	<h1>Aerial Footage (Drone)</h1>
 </div>
 <div>
 	<h1>Animation</h1>
