--- a/unit_4/index.html
+++ b/unit_4/index.html
@@ -5,24 +5,24 @@
 	<title>volt productions</title>
 </head>
 <body>
-
+<header>
 	<h1>volt.</h1>
 	<h2 id="slogan">visually magnificent storytelling how you imagined it.</h2>
-
-
-
-	<div>
+</header>
+<section>
 	<p>Empathy is the most important emotion to share in today's world. We decided to do all we can to capture it in all its beauty through film and experiences to preserve for future generations.</p>
-  <p>Our mediums include:
-    <ul>
+</section>
+<section>
+  <h2>Our mediums include:</h2>
+  <ul>
       <li>live action film</li>
       <li>animation</li>
       <li>powerful software user experiences</li>
-    </ul>
-  </p>
-  <p>Contact us at <a href="mailto:elizabethmvana@gmail.com?subject=Hello!">hello@voltproductions.com</a>
-  </p>
-</div>
+  </ul>
+</section>
+<section>
+  <p>Contact us at <a href="mailto:elizabethmvana@gmail.com?subject=Hello!">hello@voltproductions.com</a></p>
+</section>
 <div>
 	<h1>Wedding Footage</h1>
 	<p><iframe src="https://player.vimeo.com/video/333670154" width="640" height="360" frameborder="0" allow="autoplay; fullscreen" allowfullscreen></iframe>
