--- a/unit_5/index.html
+++ b/unit_5/index.html
@@ -5,24 +5,11 @@
 	<title>volt productions</title>
 </head>
 <body>
-<p>
-<br>
-</p>
+<header>
 	<h1>volt.</h1>
 	<h2 id="slogan">visually magnificent storytelling how you imagined it.</h2>
-<p>
-<br>
-</p>
-<p>
-<br>
-</p>
-<p>
-<br>
-</p>
-<p>
-<br>
-</p>
-	<div>
+</header>
+	<nav>
 	<p>Empathy is the most important emotion to share in today's world. We decided to do all we can to capture it in all its beauty through film and experiences to preserve for future generations.</p>
   <p>Our mediums include:
     <ul>
@@ -31,22 +18,28 @@
       <li>powerful software user experiences</li>
     </ul>
   </p>
-  <p>Contact us at <a href="mailto:elizabethmvana@gmail.com?subject=Hello!">hello@voltproductions.com</a>
-  </p>
-</div>
-<div>
+</nav>
+<article id="two">
 	<h1>Wedding Footage</h1>
-</div>
-<div>
-	<h1>Aerial Footage (Drone)</h1>
-</div>
-<div>
-	<h1>Animation</h1>
-	<p><iframe src="https://player.vimeo.com/video/333670154" width="640" height="360" frameborder="0" allow="autoplay; fullscreen" allowfullscreen></iframe>
+	<p><iframe class="video" src="https://player.vimeo.com/video/333670154" width="640" height="360" frameborder="0" allow="autoplay; fullscreen" allowfullscreen></iframe>
 </p>
-</div>
-<div>
+</article>
+<article id="three">
+	<h1>Aerial Footage (Drone)</h1>
+	<p><iframe class="video" src="https://player.vimeo.com/video/333670154" width="640" height="360" frameborder="0" allow="autoplay; fullscreen" allowfullscreen></iframe>
+</p>
+</article>
+<article id="four">
+	<h1>Animation</h1>
+	<p><iframe class="video" src="https://player.vimeo.com/video/333670154" width="640" height="360" frameborder="0" allow="autoplay; fullscreen" allowfullscreen></iframe>
+</p>
+</article>
+<article id="five">
 	<h1>Powerful Software User Experiences</h1>
-</div>
+	<p><iframe class="video" src="https://player.vimeo.com/video/333670154" width="640" height="360" frameborder="0" allow="autoplay; fullscreen" allowfullscreen></iframe>
+</p>
+</article>
+<footer><p>Contact us at <a href="mailto:elizabethmvana@gmail.com?subject=Hello!">hello@voltproductions.com</a>
+</p></footer>
 </body>
 </html>
