--- a/unit_5/index.html
+++ b/unit_5/index.html
@@ -10,14 +10,10 @@
 	<h2 id="slogan">visually magnificent storytelling how you imagined it.</h2>
 </header>
 	<nav>
-	<p>Empathy is the most important emotion to share in today's world. We decided to do all we can to capture it in all its beauty through film and experiences to preserve for future generations.</p>
-  <p>Our mediums include:
-    <ul>
-      <li>live action film</li>
-      <li>animation</li>
-      <li>powerful software user experiences</li>
-    </ul>
-  </p>
+	<a href="">home.</a>
+	<a href="">design.</a>
+	<a href="">film.</a>
+	<a href="">marketing.</a>
 </nav>
 <article id="two">
 	<h1>Wedding Footage</h1>
@@ -39,7 +35,7 @@
 	<p><iframe class="video" src="https://player.vimeo.com/video/333670154" width="640" height="360" frameborder="0" allow="autoplay; fullscreen" allowfullscreen></iframe>
 </p>
 </article>
-<footer><p>Contact us at <a href="mailto:elizabethmvana@gmail.com?subject=Hello!">hello@voltproductions.com</a>
+<footer><p>Contact us at <a href="mailto:Email@email.com?&subject=Check%20out%20this%20SpotX%20video%20resource...&body=Hi%20there,%20I%20recently%20came%20across%20a%20really%20comprehensive%20resource%20from%20SpotX%20University%20on%20how%20to%20get%20started%20with%20connected%20TV.%20I%20think%20you%20might%20find%20it%20helpful.%20Check%20it%20out%3A%20https%3A//spotx.tv/university/#TVBuyersGuide">hello@email.com</a>
 </p></footer>
 </body>
 </html>
