--- a/unit_8/index.html
+++ b/unit_8/index.html
@@ -13,8 +13,9 @@
 		<a id="logo" href="">volt.</a>
 	</nav>
 <header>
+<img src="images/volt-logo_pause_v2 copy.gif" width="45%" alt=""/>
 	
-	<h1>volt.</h1>
+	<!--<img src="/images/volt-logo_pause_v2 copy" alt="volt.">-->
 	<h2 id="slogan">visual storytelling.</h2>
 </header>
 <section>
